--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,7 @@
 :root {
-    --accentBlue: #181241;
-    --accentYellow: #FFBF00;
-    --background: #F8F8F8;
+    --blue: #181241;
+    --yellow: #FFBF00;
+    --greyBg: #F8F8F8;
     --white: #ffffff;
-    --blueOpacity: rgba(24,33,65,.5);
-    --bgGradient: linear-gradient(122deg, rgba(24,33,65,.60) 0%, rgba(24,33,65,.60) 100%);
+    --textOpacity: rgba(24,33,65,.5);
 }
